--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,56 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   background-color: #282c34;
   font-family: "Inter";
+  padding-bottom: 10px;
+  min-height: 100vh;
 }
 
 .App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
-  gap: 1vh;
+  gap: 15px;
 }
 
 h1 {
   font-size: calc(10px + 4vmin);
   color: rgb(195, 115, 44);
   font-weight: 900;
+  text-align: center;
 }
 
 h2 {
-  font-size: calc(10px + 3vmin);
+  font-size: calc(2px + 4vmin);
   color: rgb(55, 107, 185);
   font-weight: 700;
 }
 
 .CalculationPanel {
+  width: 100%;
+  max-width: 2500px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: flex-start;
-  gap: 2vh;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .section {
   width: 64vh;
   height: 70vh;
-  top: 12vh;
-  left: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  gap: 2.8vh;
+  gap: 20px;
   background-color: #424242;
 }
 
