--- a/src/App.css
+++ b/src/App.css
@@ -118,22 +118,14 @@ button {
   font-size: calc(10px + 1vmin);
 }
 
-.finalResult {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 2vh;
-}
-
 .finalResultPanel {
   width: 85%;
   height: 10%;
   display: flex;
   flex-direction: row;
-  align-items: left;
-  justify-content: flex-start;
-  gap: 50vh;
+  align-items: center;
+  justify-content: center;
+  gap: 2%;
   background-color: #424242;
 }
 
@@ -189,7 +181,6 @@ button {
   height: 7vh;
   background-color: #264472;
   font-size: calc(10px + 2vmin);
-  margin-top: 3.5vh;
   margin-left: 4vh;
 }
 
