--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ h2 {
 
 .CalculationPanel {
   width: 100%;
-  max-width: 2500px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -43,15 +42,16 @@ h2 {
   gap: 20px;
 }
 
-.section {
-  width: 64vh;
-  height: 70vh;
+.CalculationSection {
+  min-width: 800px;
+  height: 870px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   gap: 20px;
   background-color: #424242;
+  border: 10px solid black;
 }
 
 .result {
@@ -125,8 +125,9 @@ button {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 2%;
+  gap: 3%;
   background-color: #424242;
+  border: 10px solid black;
 }
 
 .totalResult {
